--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a:hover {
   transition: all 0.35s ease-in-out;
   padding: 1.5rem 2rem;
   /* position: absolute; */
-  background-color: #fff;
+  background-color: #0ff;
   width: 100%;
   height: 100%;
   border: none;
